# graft

./: .gitignore  Cargo.toml  README.md  SECURITY.md  _typos.toml  justfile  prek.toml  pyproject.toml  rust-toolchain.toml
.github/: pull_request_template.md
.github/workflows/: cd-publish.yml  ci-pr-checks.yml  ci-static-checks.yml  ci-test.yml
crates/graft-cli/: Cargo.toml
crates/graft-cli/src/: lib.rs  main.rs
crates/graft-client/: Cargo.toml
crates/graft-client/src/: lib.rs
crates/graft-core/: Cargo.toml
crates/graft-core/src/: application_model.rs  lib.rs
crates/graft-daemon/: Cargo.toml
crates/graft-daemon/src/: cli.rs  lib.rs  main.rs  scratch_wire.rs
crates/graft-explain/: Cargo.toml
crates/graft-explain/src/: constraints.rs  diagnostics.rs  evidence_result.rs  explain.rs  lib.rs  next_actions.rs  properties.rs
crates/graft-git/: Cargo.toml
crates/graft-git/src/: lib.rs
crates/graft-policy/: Cargo.toml
crates/graft-policy/src/: lib.rs
crates/graft-promote/: Cargo.toml
crates/graft-promote/src/: lib.rs
crates/graft-repo/: Cargo.toml
crates/graft-repo/src/: lib.rs
crates/graft-runtime/: Cargo.toml
crates/graft-runtime/src/: candidate.rs  config.rs  constraint.rs  daemon_client.rs  daemon_wire.rs  explain_catalog.rs  lib.rs  patch_query.rs  presentation.rs  promotion.rs  property.rs  registry.rs  repo.rs  requirements.rs  roto_constraints.rs  roto_properties.rs  routing.rs  scratch.rs  state_runtime.rs  tests.rs  tree.rs  validation.rs  view.rs  workspace.rs
crates/graft-runtime/tests/fixtures/: legacy-v1-registry-bundle.json
crates/graft-scratch/: Cargo.toml
crates/graft-scratch/src/: engine.rs  hashlines.rs  lib.rs  ops.rs  tests.rs  wire.rs
crates/graft-store/: Cargo.toml
crates/graft-store/src/: discovery.rs  evidence.rs  index.rs  lib.rs  lock.rs  objects.rs  paths.rs  records.rs  registry.rs  tests.rs  tree_query.rs  virtual_tree.rs
crates/graft-sync/: Cargo.toml
crates/graft-sync/src/: lib.rs  manifest.rs  progress.rs  public_store.rs  tests.rs
crates/graft-validate/: Cargo.toml
crates/graft-validate/src/: lib.rs
crates/graft-validate/tests/: roto_constraint_language_poc.rs  roto_property_language_poc.rs
crates/graft-validate/tests/fixtures/: constraints.roto  constraints_check_composition_ice.roto  properties.roto  properties_check_composition_ice.roto
docs/: design.md  graft-kernel.lean  roto-property-language-poc.md
docs/design/: admission.md  lifecycle.md  model.md  property.md  reference.md  runtime.md  workspace.md
examples/: README.md
examples/constraints/: cargo_clippy_clean.roto  cargo_tests_pass.roto  empty_change.roto  no_generated_artifacts.roto  only_touches_docs.roto  precision_invariance.roto  safe_patch.roto  training_alignment.roto
examples/full/: README.md  constraints.roto  graft.toml  properties.roto
examples/properties/: cargo_clippy_clean.roto  cargo_tests_pass.roto  empty_change.roto  no_generated_artifacts.roto  only_touches_docs.roto  precision_invariance.roto  safe_patch.roto  training_alignment.roto
formal/: kernel.lean
properties/: CargoClippyClean.toml  CargoDocTestsPass.toml  CargoFmtClean.toml  CargoTestsPass.toml  NoGeneratedArtifacts.toml  NoModelWeightChange.toml  OnlyTouchesDocs.toml  OnlyTouchesTests.toml  ValidPatch.toml
templates/: README.md
templates/default/: .gitignore  README.md  constraints.roto  graft.toml  properties.roto
tests/: candidate_from_scratch_smoke.sh  cli_help_smoke.sh  compiler_docs_smoke.sh  constraint_lattice_smoke.sh  constraint_warning_smoke.sh  crate_boundary_smoke.sh  cross_repo_constraint_smoke.sh  cross_repo_property_smoke.sh  daemon_lifecycle_smoke.sh  default_workspace_sync_smoke.sh  diagnostics_smoke.sh  e2e_compiler_as_docs.sh  evidence_retry_smoke.sh  evidence_verifier_change_smoke.sh  explain_smoke.sh  hole_report_smoke.sh  learn_smoke.sh  migrate_conflict_smoke.sh  promote_config_smoke.sh  property_warning_smoke.sh  quality_gates_smoke.sh  repo_clone_smoke.sh  run_state_smoke.sh  scratch_capture_smoke.sh  scratch_cli_smoke.sh  scratch_e2e.sh  scratch_protocol_smoke.sh  search_evidence_smoke.sh  store_lifecycle_smoke.sh  tree_cli_smoke.sh  v2_store_tier_smoke.sh  workspace_daemon_isolation_smoke.sh
tests/lib/: smoke.sh  socket_probe.sh
