[workspace]
resolver = "3"
members = [
  "crates/graft-cli",
  "crates/graft-client",
  "crates/graft-core",
  "crates/graft-daemon",
  "crates/graft-explain",
  "crates/graft-policy",
  "crates/graft-promote",
  "crates/graft-repo",
  "crates/graft-runtime",
  "crates/graft-scratch",
  "crates/graft-store",
  "crates/graft-sync",
  "crates/graft-validate",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
description = "Constraint-aware patch runtime for agent changes"
repository = "https://github.com/zrr1999/graft"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
clap = { version = "4.6.1", features = ["derive"] }
fs2 = "0.4.3"
gix = "0.84.0"
rusqlite = { version = "0.40.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
time = { version = "0.3.44", features = ["formatting", "parsing", "serde"] }
toml = "1.1.2"
