[project]
name = "graftkit"
description = "Constraint-aware patch runtime for agent changes"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [{ name = "Zhan Rongrui" }]
keywords = ["agent", "evidence", "git", "patch", "runtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Rust",
  "Topic :: Software Development :: Version Control",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/zrr1999/graft#readme"
Homepage = "https://github.com/zrr1999/graft"
Releases = "https://github.com/zrr1999/graft/releases"
Repository = "https://github.com/zrr1999/graft"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
bindings = "bin"
manifest-path = "crates/graft-cli/Cargo.toml"
strip = true
