[package]
name = "graft-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "graft"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
graft-runtime = { path = "../graft-runtime" }
