[package]
name = "graft-daemon"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
graft-client = { path = "../graft-client" }
graft-core = { path = "../graft-core" }
graft-runtime = { path = "../graft-runtime" }
graft-scratch = { path = "../graft-scratch" }
graft-store = { path = "../graft-store" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
