[package]
name = "graft-policy"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
graft-core = { path = "../graft-core" }
graft-explain = { path = "../graft-explain" }
thiserror.workspace = true
