[package]
name = "graft-repo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
gix.workspace = true
graft-core = { path = "../graft-core" }
thiserror.workspace = true
