[package]
name = "graft-scratch"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
graft-client = { path = "../graft-client" }
graft-core = { path = "../graft-core" }
graft-store = { path = "../graft-store" }
serde_json.workspace = true
thiserror.workspace = true
