[package]
name = "graft-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
blake3.workspace = true
graft-core = { path = "../graft-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
