[package]
name = "graft-sync"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
gix.workspace = true
graft-core = { path = "../graft-core" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
